--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <h1>This is a Header</h1>
-      <p>This is a Paragraph</p>
-      <p>This is the second paragraph</p>
+      <h1>This is a Header.</h1>
+      <p>This is a Paragraph.</p>
+      <p>This is the second paragraph.</p>
    </body>
 </html>
